--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "tone": "^13.8.25",
+    "vexflow": "^3.0.7",
     "webmidi": "^2.5.1"
   },
   "scripts": {
