--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "types": "tsc --watch",
     "preview": "vite preview"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
+    "events": "^3.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.53.0",
+    "tone": "^14.7.77",
+    "vexflow": "^4.0.3",
+    "webmidi": "^3.0.21"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
