Port lib to typescript

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webmidi": "^3.0.21"
   },
   "devDependencies": {
+    "@types/events": "^3.0.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
